--- a/F1000WF.bib
+++ b/F1000WF.bib
@@ -3638,3 +3638,14 @@
   number={5},
   year={2009}
 }
+
+@article{wright2015decipher,
+  title={DECIPHER: harnessing local sequence context to improve protein multiple sequence alignment},
+  author={Wright, Erik S},
+  journal={BMC bioinformatics},
+  volume={16},
+  number={1},
+  pages={1},
+  year={2015},
+  publisher={BioMed Central}
+}
